<resources>
    <string name="app_name">Easynvest Test</string>
    <string name="title_value_application">Quanto você gostaria de aplicar?*</string>
    <string name="hint_value_application">R$</string>
    <string name="title_date_application">Qual a data de vencimento do investimento?*</string>
    <string name="hint_date_application">dia/mês/ano</string>
    <string name="title_rate_application">Qual o percentual do CDI do investimento?*</string>
    <string name="hint_rate_application">100%</string>
    <string name="label_simulate">Simular</string>

    <string name="title_result_simulate">Resultado da simulação</string>
    <string name="label_total_yield">Rendimento total de</string>
    <string name="label_initially_applied_value">Valor aplicado inicialmente</string>
    <string name="label_gross_amount">Valor bruto do investimento</string>
    <string name="label_yield_value">Valor do rendimento</string>
    <string name="label_taxes_amount">IR sobre o investimento</string>
    <string name="label_net_amount">Valor líquido do investimento</string>
    <string name="label_maturity_date">Data de resgate</string>
    <string name="label_maturity_total_days">Dias corridos</string>
    <string name="label_yearly_interest_rate">Rendimento mensal</string>
    <string name="label_rate_applied_cdi">Percentual do CDI do investimento</string>
    <string name="label_annual_net_rate_profit">Rentabilidade anual</string>
    <string name="label_rate_profit">Rentabilidade no período</string>

    <string name="label_simulate_again">Simular novamente</string>
    <string name="invalid_invested_amount">Valor aplicado inválido</string>
    <string name="invalid_rate_amount">Percentual do investimento inválido</string>
    <string name="invalid_date">"Data de vencimento inválida</string>
    <string name="text_label_taxes_amount">%1$s(%2$s)</string>
    <string name="loading_error">A simulação não pôde ser carregada. Por favor, tente novamente mais tarde.</string>
</resources>